[package]
name = "cardascii-24game"
version = "0.1.0"
authors = ["Anibal Fernando Antonelli <anibal.anto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
rand = "0.8.0"
message-io = { version = "0.14", default-features = false, features = ["websocket"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.126"
bincode = "1.3.1"
meval = "0.2"
rustyline = "9.0.0"
nom = "7"
